test/assets/invalid/expect-char.hs
import Data.Char (ord)

a :: Int
a = ord "a"